--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,10 @@
 title: "Midpoint Deliverable"
 output: html_document
 ---
-
+```{r include = FALSE}
+source("scripts/aggregateTableScript.R")
+library(knitr)
+```
 ### Introductory paragraph
 Sports are one of the many things that help connect people and communities across the globe. We're interested in making use of this open dataset so people can grow their appreciation and understanding of sports. Providing this kind of data can help improve player performance and encourage fans to attend games.
 
@@ -12,7 +15,8 @@ Write a summary paragraph that includes information calculated by your summary i
 ### Table
 Render your table and describe pertinent observations found in it
 ```{r echo = F}
-
+df <- aggregate_info(athlete_events)
+kable(df)
 ```
 
 ### Purpose
