--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ source("scripts/aggregateTableScript.R")
 source("scripts/summaryInformation.R")
 library(knitr)
 ```
-### Introductory paragraph
+### Introductory paragraph 
 Sports are one of the many things that help connect people and communities across the globe. We're interested in making use of this open dataset so people can grow their appreciation and understanding of sports. Providing this kind of data can help improve player performance and encourage fans to attend games.
 
 ### Summary Paragraph
@@ -22,8 +22,13 @@ kable(info$gold_winners)
 ```
 
 
-### Table
-Some observations we found inside our aggregated table were...
+### Table 
+Some pertinent observations we found inside our aggregated table were...
+
+- United States comes in first place with the most won medals
+- Soviet Union comes in second place with half of the United State's total medals
+- Third to tenth place are all in the 1000s with total medals won
+- United States almost has 5 times the amount of total medals compared to Hungary
 
 ```{r echo = F}
 df <- aggregate_info(athlete_events)
